--- a/index.org
+++ b/index.org
@@ -28,54 +28,6 @@ bibliography:../hoard/bib.bib
 :Licence:   MIT/CC BY-SA 4.0
 :END:
 
-** Succession Model
-
-This works the same as in [[https://en.wikipedia.org/wiki/Ecological_succession][ecological succession]] but for
-civilization:
-
-  - terrestrial 
-    - nomadic hunter-gather
-    - semi-nomadic
-    - sedantary 
-      - agricultural -> villages and towns
-      - industrial   -> cities and states
-      - info-network 
-      - machine-cog  -> machine-cognition controlling machines
-  - extra-terrestrial
-    - nomadic -> exploritory  -> robotic then human
-    - sedantary
-      - stations
-      - colonies
-      - solar civilizations 
-  - extra-solar
-   
-layers of the primer will provide generative grammars for
-each layer as well as all of the knowledge needed to build
-that stage and lay the groundwork for the next stage.
-
-The primer is focused on expressions of civilization rather
-than manifestions or instances.
-
-In this respect, the primer is prescriptive more than
-descriptive.
-
-The primer will include specific recomendations for
-standards -- weights and measures, standard things like
-screw and bolt thread specifications, guages of wire etc.
-
-It will provide keystone designs for things like electrical
-sockets, hinges, electric motors.
-
-It will provide keystone designs for processes and keystones
-for building them for different succession layers.
-
----
-
-
-*** Terms
-
-- succession stage --
-- keystone designs -- reference designs 
 
 ** Primer Core
 
@@ -84,43 +36,6 @@ primer are, well, primitives -- there are structures at all
 stages -- but there will be different knowledge and keystone
 designs for each stage, each building on the other beneath
 it.
-
-** Reversbility -- upgradability & degradability
-
-When possible everything in the primer should at least try
-to be capable of gracefully degrading, so that if there is a
-problem that knocks you back to a previous stage, you are
-not screwed.
-
-If this is designed into the system from day one, then some
-interesting things become possible -- we can provide
-keystone designs which can be upgraded years or decades
-later.
-
-    Let's use a washing machine as an example. An agitating
-    clothes washer can be build that will work mechanically,
-    with any power source from using water or even a biycle
-    as well as an electrical motor.  Controls for the
-    washing machine can be mechanical, or electronic.  You
-    could also create an API and a network interface and
-    install sensors in the washing machine so that the
-    machine could me controlled remotely via software or
-    machine-cog.  Since washing machines can have used to be
-    built that lasted decades with little or no maintenance,
-    there is no reason why we can't have design where you
-    can upgrade a machine for electricity then electronics
-    and then network controllable.  And this should then
-    work in reverse.  If the network is down, it should work
-    electronically, if the electronics are down it should
-    work mechnically with electricity, if electricity is
-    down you should be able to reconnect the belt to a
-    mechanical power source.
-
-Such designs are not as easy to build as designs that are
-built for a single succession stage -- but because a washing
-machine, if well designed and built, should easily last a
-half century, then it makes sense to take the extra effort
-to make it both upgradable and degradable
 
 ** Survival
 
@@ -211,6 +126,9 @@ actual study programs -- those will go into a Hoard.
 ** Science
 ** Tools
 ** Machines
+ - hand machines
+ - transporation
+ - 
 ** Structures
 ** Energy
 ** Systems
